--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -4,7 +4,7 @@ name: Checks
 on:
   push:
     paths:
-      - "BE/**"
+      - "server/**"
 
 jobs:
   test-lint:
@@ -18,7 +18,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Test
-        run: docker-compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
       - name: Lint
-        run: docker-compose run --rm app sh -c "flake8"
+        run: docker-compose run --rm server sh -c "flake8"
+      #- name: Test
+      #  run: docker-compose run --rm server sh -c "python manage.py wait_for_db && python manage.py test"
