--- a/Pipfile
+++ b/Pipfile
@@ -5,12 +5,11 @@ name = "pypi"
 
 [packages]
 django = "*"
-djangorestframework = "*"
-psycopg = "*"
+psycopg2 = "*"
 drf-spectacular = "*"
+djangorestframework = "*"
 
 [dev-packages]
-flake8 = "*"
 
 [requires]
 python_version = "3.11"
