--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.9"
 services:
   server:
     build:
-      context: .
+      context: ./server
       args:
         - DEV=true #개발 단계에서만 사용하는 requirements.dev.txt를 사용할 수 있음
     ports:
