--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -22,7 +22,7 @@ jobs:
         run: docker-compose run --rm server sh -c "python manage.py wait_for_db && python manage.py test"
       - name: Lint
         run: echo "exclude = .git,__pycache__,venv,migrations,manage.py,settings.py" > .flake8 && \
-              docker-compose run --rm server sh -c "flake8"
+             docker compose run --rm server sh -c "flake8"
 
 
 
