--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,11 +12,8 @@ services:
       sh -c "python manage.py wait_for_db &&
              python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
-    environment:
-      - DB_HOST=db
-      - DB_NAME=pongdb
-      - DB_USER=ponguser
-      - DB_PASS=changeme
+    env_file:
+      - server/.env
     depends_on:
       - db
 
@@ -24,10 +21,8 @@ services:
     image: postgres:13-alpine
     volumes:
       - pong-db-data:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_DB=pongdb
-      - POSTGRES_USER=ponguser
-      - POSTGRES_PASSWORD=changeme
+    env_file:
+      - server/.env
 
   frontend:
     image: nginx
