--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
              python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
     env_file:
-      - server/.env
+      - .env
     depends_on:
       - db
 
@@ -22,7 +22,7 @@ services:
     volumes:
       - pong-db-data:/var/lib/postgresql/data
     env_file:
-      - server/.env
+      - .env
 
   frontend:
     image: nginx
