--- a/server/Pipfile
+++ b/server/Pipfile
@@ -11,6 +11,9 @@ djangorestframework = "*"
 flake8 = "*"
 python-dotenv = "*"
 requests = "*"
+web3 = "*"
+py-solc-x = "*"
+solc = "*"
 
 [dev-packages]
 
