✨ feat: 블록체인 - 대쉬보드 뷰 연결

--- a/server/Pipfile
+++ b/server/Pipfile
@@ -12,6 +12,9 @@ flake8 = "*"
 python-dotenv = "*"
 requests = "*"
 django-cors-headers = "*"
+web3 = "*"
+py-solc-x = "*"
+solc = "*"
 
 [dev-packages]
 
