✨ feat: daphne 추가 및 인메모리 캐시 웹소켓 asgi 설정

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -10,6 +10,7 @@ EXPOSE 8000
 
 ARG DEV=false
 RUN apk add --update --no-cache postgresql-client postgresql-dev gcc musl-dev && \
+    apk add libffi-dev && \
     pip install pipenv && \
     pipenv install --system --deploy --ignore-pipfile
 
