feat: nginx 컨테이너로 변경 및 docker compose, dockerfile 수정, websocket 전역변수 지정

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -6,14 +6,13 @@ ENV PYTHONUNBUFFERED 1
 COPY ./Pipfile /server/Pipfile
 COPY ./Pipfile.lock /server/Pipfile.lock
 WORKDIR /server
-EXPOSE 8000
+# EXPOSE 8000
 
 ARG DEV=false
 RUN apk add --update --no-cache postgresql-client postgresql-dev gcc musl-dev && \
     apk add libffi-dev && \
     pip install pipenv && \
     pipenv install --system --deploy --ignore-pipfile
-
 
 EXPOSE 8000
 
