--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,8 @@ services:
     build:
       context: ./frontend
     restart: always
+    env_file:
+      - .env
     depends_on:
       - backend
 
