--- a/server/Pipfile
+++ b/server/Pipfile
@@ -10,7 +10,6 @@ drf-spectacular = "*"
 djangorestframework = "*"
 flake8 = "*"
 python-dotenv = "*"
-requests = "*"
 django-cors-headers = "*"
 web3 = "*"
 py-solc-x = "*"
@@ -19,6 +18,7 @@ channels = "*"
 channels-redis = "*"
 daphne = "*"
 pyotp = "*"
+aiohttp = "*"
 
 [dev-packages]
 
