💚 chore: celery 설치

--- a/server/Pipfile
+++ b/server/Pipfile
@@ -19,6 +19,8 @@ daphne = "*"
 pyotp = "*"
 aiohttp = "*"
 pytz = "*"
+celery = {extras = ["redis"], version = "*"}
+django-celery-results = "*"
 
 [dev-packages]
 
